--- a/templates/interactor.ejs
+++ b/templates/interactor.ejs
@@ -1,14 +1,15 @@
 import React, { useEffect, ChangeEvent, MouseEvent } from 'react';
 import Presenter from './<%=name%>Presenter';
 import { useTypedSelector, useDispatch } from '../../controllers';
+import { IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
 import {} from '../../types';
 
-const interactor = () => {
+const Interactor = () => {
   const dispatch = useDispatch();
 
   useEffect(() => {}, []);
 
   return <Presenter />;
-}
+};
 
-export default interactor;
+export default Interactor;
