--- a/templates/presenter.ejs
+++ b/templates/presenter.ejs
@@ -1,15 +1,16 @@
-import { useEffect, ChangeEvent, MouseEvent } from 'react';
-import styles from './<%=name%>.module.scss'
+import React, { useEffect, ChangeEvent, MouseEvent } from 'react';
+import styles from './<%=name%>.module.scss';
+import { IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
 import {} from '../../types';
 
-const presenter = (props: {}) => {
+const Presenter = (props: {}) => {
   const {} = props;
 
   return (
     <section className={styles.container}>
-      <div></div>
+      <div>Hello World</div>
     </section>
   );
-}
+};
 
-export default presenter;
+export default Presenter;
