--- a/templates/view.ejs
+++ b/templates/view.ejs
@@ -1,13 +1,16 @@
-import { ChangeEvent, MouseEvent } from 'react';
-import styles from './<%=name%>.module.scss'
+import React, { ChangeEvent, MouseEvent } from 'react';
+import styles from './<%=name%>.module.scss';
+import { IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
 import {} from '../../types';
 
-const view = (props: {}) => {
+const View = (props: {}) => {
   const {} = props;
 
   return (
-    <div className={styles.view}></div>
+    <div className={styles.view}>
+      <p>Hello World</p>
+    </div>
   );
-}
+};
 
-export default view;
+export default View;
