--- a/templates/interactor.ejs
+++ b/templates/interactor.ejs
@@ -1,7 +1,7 @@
 import React, { useEffect, ChangeEvent, MouseEvent } from 'react';
 import Presenter from './<%=name%>Presenter';
 import { useTypedSelector, useDispatch } from '../../controllers';
-import { IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
+import { TMProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
 import {} from '../../types';
 
 const Interactor = () => {
