--- a/templates/presenter.ejs
+++ b/templates/presenter.ejs
@@ -1,9 +1,9 @@
 import React, { useEffect, ChangeEvent, MouseEvent } from 'react';
 import styles from './<%=name%>.module.scss';
-import { IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
+import { TMProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> } from './<%=name%>Type';
 import {} from '../../types';
 
-const Presenter = (props: {}) => {
+const Presenter = (props: TMProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%>) => {
   const {} = props;
 
   return (
