--- a/templates/type.ejs
+++ b/templates/type.ejs
@@ -1,1 +1,1 @@
-export interface IProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> {}
+export type TMProps<%=(name.charAt(0).toUpperCase() + name.slice(1))%> = {}
