--- a/src/App.global.scss
+++ b/src/App.global.scss
@@ -23,6 +23,8 @@
 }
 
 body {
+  width: 100%;
+  height: 100%;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
   @include var(color, font-color);
